src/compiler/z42.Tests/Fixtures/errors/enum_member_modifier/source.z42
namespace Demo;

enum Color {
    public Red,
    Green,
}

void Main() { }
